syntax = "proto3";
package example.api;

option go_package = "github.com/nartvt/profile-service/internal/conf;conf";

import "google/protobuf/duration.proto";

import "core.proto";

message Bootstrap {
  core.conf.Server server = 1;
  Data data = 2;
  NatServer natServer = 3;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message NatServer {
    string url  = 1;
    Topic topic = 2;
}

message Topic {
   string new_profile_topic = 1;
}
